// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Row > borders > renders borderBottom 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR bHjpxP sc-jwTyAe jrLFzT"
    >
      <div
        class="sc-bRKDuR bHjpxP"
      >
        <h1
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ hZFdzh"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > borders > renders borderTop 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR bHjpxP sc-jwTyAe joyHXT"
    >
      <div
        class="sc-bRKDuR bHjpxP"
      >
        <h1
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ hZFdzh"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > headings > renders bold heading 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR bHjpxP sc-jwTyAe itoHSn"
    >
      <div
        class="sc-bRKDuR bHjpxP"
      >
        <h1
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ hZFdzh"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > headings > renders heading 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR bHjpxP sc-jwTyAe cbpIdC"
    >
      <div
        class="sc-bRKDuR bHjpxP"
      >
        <h1
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ hZFdzh"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > headings > renders subHeading 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR bHjpxP sc-jwTyAe cbpIdC"
    >
      <div
        class="sc-bRKDuR bHjpxP"
      >
        <h1
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ hZFdzh"
          cursor="inherit"
          title=""
        >
          a nice sub heading
        </p>
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > icons > renders iconLeft 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR bHjpxP sc-jwTyAe iQFqtA"
    >
      <span
        class="sc-bRKDuR bHjpxP sc-fhHczv lfpoiQ"
        color="liquorice"
        data-testid="info-container"
        rotate="0"
        size="18"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 0C5.383 0 0 5.383 0 12s5.383 12 12 12 12-5.383 12-12S18.617 0 12 0zm-1 6.99a1 1 0 112 0c0 .553-.447 1.005-1 1.005-.553 0-1-.442-1-.995v-.01zM11 11a1 1 0 112 0v7a1 1 0 11-2 0v-7zm-9 1c0 5.514 4.486 10 10 10s10-4.486 10-10S17.514 2 12 2 2 6.486 2 12z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="sc-bRKDuR bHjpxP"
      >
        <h1
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ hZFdzh"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > icons > renders iconRight 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR bHjpxP sc-jwTyAe cbpIdC"
    >
      <div
        class="sc-bRKDuR bHjpxP"
      >
        <h1
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ hZFdzh"
          cursor="inherit"
          title=""
        />
      </div>
      <span
        class="sc-bRKDuR bHjpxP sc-fhHczv cTkdi iconRight"
        color="marzipan"
        data-testid="info-container"
        rotate="0"
        size="24"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 0C5.383 0 0 5.383 0 12s5.383 12 12 12 12-5.383 12-12S18.617 0 12 0zm-1 6.99a1 1 0 112 0c0 .553-.447 1.005-1 1.005-.553 0-1-.442-1-.995v-.01zM11 11a1 1 0 112 0v7a1 1 0 11-2 0v-7zm-9 1c0 5.514 4.486 10 10 10s10-4.486 10-10S17.514 2 12 2 2 6.486 2 12z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
  </div>
</body>
`;

exports[`Row > type > renders curved last 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR bHjpxP sc-jwTyAe TJUoj"
    >
      <div
        class="sc-bRKDuR bHjpxP"
      >
        <h1
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ hZFdzh"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > type > renders curved type 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR bHjpxP sc-jwTyAe dDYruh"
    >
      <div
        class="sc-bRKDuR bHjpxP"
      >
        <h1
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ hZFdzh"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Row > type > renders first type 1`] = `
<body>
  <div>
    <div
      class="sc-bRKDuR bHjpxP sc-jwTyAe cfQTIj"
    >
      <div
        class="sc-bRKDuR bHjpxP"
      >
        <h1
          class="sc-bRKDuR bHjpxP sc-dTvVRJ JyLYT"
          cursor="inherit"
          title=""
        >
          A lovely heading
        </h1>
        <p
          class="sc-bRKDuR bHjpxP sc-dTvVRJ hZFdzh"
          cursor="inherit"
          title=""
        />
      </div>
    </div>
  </div>
</body>
`;
